# ForerunnerEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxygen  ForerunnerEngineConfig.h.in  LICENSE  README.md  vcpkg.json
CMake/: ExternalDependencies.cmake  FindWayland.cmake
Editor/: CMakeLists.txt  EditorCore.cpp  ForerunnerEditor.exe.manifest
Engine/: CMakeLists.txt  ForerunnerEngineConfig.h
Engine/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  FreeMovementCamera.cpp  FreeMovementCamera.h
Engine/Config/: CPUInformation.h  FRMath.h  FilePaths.h  ProjectConfig.h
Engine/Controller/: CMakeLists.txt  XInputController.cpp  XInputController.h
Engine/Core/Window/: CMakeLists.txt  Win32Window.cpp  Win32Window.h  Window.h  X11Window.cpp  X11Window.h
Engine/IO/: CMakeLists.txt  ImageIO.cpp  ImageIO.h
Engine/Renderer/: BaseRenderer.cpp  BaseRenderer.h  CMakeLists.txt  Colors.h  D3D11Renderer.cpp  D3D11Renderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLTexture.cpp  OpenGLTexture.h  Renderer.h  Vertices.h
Engine/Renderer/Lighting/: BaseLight.h  DirectionalLightH.h
Engine/Renderer/Materials/: Materials.h
Engine/Renderer/Primatives/: D3D11PrimativeManager.cpp  D3D11PrimativeManager.h  OpenGLPrimativeManager.cpp  OpenGLPrimativeManager.h  Primative3D.cpp  Primative3D.h  PrimativeManager.h
Engine/Renderer/Primitives/: D3D11PrimitiveManager.h  OpenGLPrimativeManager.cpp  OpenGLPrimitive2D.cpp  OpenGLPrimitive2D.h  OpenGLPrimitive3D.h  Primitive3D.cpp  Primitive3D.h  PrimitiveData2D.h  PrimitiveData3D.h  Transform.h  Vertices.h
Engine/Renderer/Shaders/: BaseShader.h  BufferLayouts.hlsl  D3D11Shader.cpp  D3D11Shader.h  DefaultPixelShader.hlsl  DefaultVertexShader.hlsl  GLSLShaders.h  OpenGLShader.cpp  OpenGLShader.h
Engine/Scene/: BaseScene.h  CMakeLists.txt  D3D11Scene.cpp  D3D11Scene.h  OpenGLScene.cpp  OpenGLScene.h
Engine/Time/: BaseTimer.h  CMakeLists.txt  StandardTimer.cpp  StandardTimer.h  Timer.h  WindowsTimer.cpp  WindowsTimer.h
Engine/Window/: CMakeLists.txt  Window.h
Examples/: CMakeLists.txt
Examples/Renderer/: CMakeLists.txt  RenderTest.cpp
Examples/Window/: CMakeLists.txt  WindowTest.cpp
Support/: shaderToCString.py
Test/: CMakeLists.txt
Test/Renderer/: CMakeLists.txt  RenderTest.cpp
Test/Window/: CMakeLists.txt  WindowTest.cpp
