###########################################################################
### @File:
###     CMakeLists.txt
### @Notes:
###     Input Cmake File
### @Author:
###     Haval Ahmed
### @Copyright:
###		All rights reserved Haval Ahmed
###########################################################################

###########################################################################
### Define the project
###########################################################################
project(FRController)

###########################################################################
### Create the target
###########################################################################
add_library (FRController STATIC XInputController.h XInputController.cpp)

###########################################################################
### Define the target
###########################################################################
target_include_directories(FRController PUBLIC "./")
